war/css/main.css
/* Copyright cantstopthesignals@gmail.com */
html {
  background: white;
  height: 100%;
}
body.main {
  background-color: #333;
  font-family: Arial;
  margin: 0;
  padding: 0;
  position: relative;
  height: 100%;
  width: 100%;
}
body > iframe {
  top: -100px;
}
a {
  color: #0000cc;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
.app {
  height: 100%;
}
.app-bar {
  background-color: #222222;
  position: relative;
  box-sizing: border-box;
}
.app-bar-icon {
  display: inline-block;
  vertical-align: middle;
}
.app-icon {
  display: inline-block;
  overflow: hidden;
}
.app-icon > .inner {
  width: 128px;
  height: 128px;
  background: url(/images/logo128.png) no-repeat;
}
.app-bar-main-menu {
  color: white;
  display: inline-block;
  position: relative;
  vertical-align: middle;
}
.app-bar-main-menu > .title {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.app-bar-main-menu > .arrow {
  width: 0;
  height: 0;
  position: absolute;
  right: 0;
  bottom: 0;
}
.app-bar > .spinner {
  float: right;
}
.app-bar-button-bar {
  float: right;
}
.app-bar-button-bar > .button {
  float: right;
  margin-left: 5px;
}
.footer {
  color: #ddd;
  text-align: center;
}
.footer > a {
  color: #99f;
}
.button {
  background: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#ccc));
  color: black;
  cursor: pointer;
  border: 1px solid #999;
  border-radius: 2px;
  display: inline-block;
  margin: 0;
  text-align: center;
}
.button:active {
  background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#eee));
}
.dialog {
  background-color: black;
  color: white;
  width: 300px;
  position: absolute;
  left: 50%;
  top: 50%;
  padding: 10px 10px;
  border: 1px solid black;
  border-radius: 15px;
  -moz-border-radius: 15px;  /* FF lt 4 */
  box-shadow: 0px 5px 10px #000;
  -moz-box-shadow: 0px 5px 10px #000;  /* FF lt 4 */
  -webkit-box-shadow: 0px 5px 10px #000;  /* Safari le 5 */
  overflow: hidden;
  z-index: 20;
}
.dialog .button {
  border: 1px solid #aaa;
  display: block;
  margin-top: 5px;
}
.notification {
  border: 1px solid #a00;
  background-color: #a00;
  color: white;
  white-space: nowrap;
  position: absolute;
}
.events-view {
  position: relative;
}
.events-view-scroll {
  background: #fff;
  overflow-x: auto;
  overflow-y: scroll;
  position: relative;
  box-sizing: border-box;
}
.events-timeline {
  background: #fff;
  outline: 0;
  -moz-user-select: none;
  -webkit-user-select: none;
  position: absolute;
  box-sizing: border-box;
  overflow-y: hidden;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
.day-banner {
  color: white;
  position: absolute;
  background-color: rgba(40, 40, 40, 0.5);
  width: 100%;
  box-sizing: border-box;
  pointer-events: none;
  z-index: 1;
}
.day-banner.inline {
  position: relative;
  top: 0px;
}
.time-axis {
  position: absolute;
  border-bottom: 1px solid #cdcdcd;
  width: 100%;
}
.time-axis > .time-box {
  border-right: 1px solid #cdcdcd;
  color: #666;
  text-align: right;
  height: 100%;
  box-sizing: border-box;
}
.time-axis > .time-box > .ampm {
  color: #999;
}
.time-axis-patch-canvas {
  position: absolute;
}
.time-marker {
  border-top: 2px solid;
  pointer-events: none;
  position: absolute;
}
.time-marker-label {
  text-align: right;
  position: absolute;
  pointer-events: none;
  background-color: rgba(255, 255, 255, 0.9);
}
.inline-events-editor {
  pointer-events: none;
  position: absolute;
  width: 100%;
}
.inline-events-editor > .button-bar {
  pointer-events: auto;
  background-color: #444;
  box-sizing: border-box;
  overflow: hidden;
  position: absolute;
  width: 100%;
}
.inline-events-editor > .button-bar:first-child {
  bottom: inherit;
}
.inline-events-editor > .button-bar > .button {
  border-radius: 0px;
  vertical-align: middle;
  text-align: center;
  padding: 0;
}
.inline-events-editor > .button-bar > .button > .arrow {
  border: solid transparent;
  width: 0px;
  height: 0px;
  display: inline-block;
}
.arrow.up {
  border-bottom-color: black !important;
  border-top-width: 0 !important;
}
.arrow.down {
  border-top-color: black !important;
  border-bottom-width: 0 !important;
}
.inline-events-editor > .button-bar > .shadow {
  width: 100%;
  position: absolute;
}
.event-card {
  cursor: default;
  position: absolute;
  border: 1px solid;
  outline: 0;
  overflow: hidden;
  white-space: nowrap;
  -moz-user-select: text;
  -webkit-user-select: text;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
.event-card.selected {
}
.event-card.micro-height,
.event-card.short-height {
  text-overflow: ellipsis;
}
.event-card.large-height {
  white-space: normal;
}
.event-card.attached-to-patch {
  border-left-width: 0;
}
.event-card > .date-range {
  font-weight: bold;
}
.event-card.short-height > .date-range {
}
.event-card.micro-height > .date-range {
  display: inline;
}
.calendar-chooser {
}
.spinner {
  display: inline-block;
}

